# tetris-one-thousand

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pygbag.ini  pyproject.toml  render.yaml  requirements.txt  server.py
.github/workflows/: deploy-cloudflare.yml  deploy-pages.yml
server/: config.py  highscores.py  main.py
server/game/: board.py  engine.py  piece.py  types.py
server/network/: ws.py
src/tetris/: __init__.py  constants.py  game.py  input.py
static/: game.js  index.html
tests/: load_test.py  test_board.py  test_engine.py  test_highscores.py  test_piece.py  test_ws.py
tetris/: bag.py  board.py  main.py  pieces.py  render.py
