[project]
name = "tetris"
version = "0.1.0"
description = "Modern Tetris in Python (pygame-ce), web-ready via pygbag"
readme = "README.md"
authors = [
    { name = "andrewlidong", email = "andrewdong1994@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.7",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pygbag>=0.9.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
