[project]
name = "tetris"
version = "0.1.0"
description = "Tetris: single-player (pygame-ce, web via pygbag) and multiplayer server for 1000+ players"
readme = "README.md"
authors = [
    { name = "andrewlidong", email = "andrewdong1994@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pygbag>=0.9.3",
    "ruff>=0.15.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
